# v3

./: .CLAUDE.md  .gitignore  README.md  package.json
backend/: .env.example  CLAUDE.md  README.md  TODO.md  encore.app  index.ts  package-lock.json  package.json
backend/arbitrage/: arbitrage.ts  encore.service.ts
backend/common/: db.ts
backend/exchanges/: encore.service.ts  exchanges.ts
backend/foo/: encore.service.ts  foo.test.ts  foo.ts
backend/hello/: auth.ts  hello.ts
backend/marketmaking/: encore.service.ts  marketmaking.ts
backend/prisma/: schema.prisma
backend/prisma/migrations/20250721110821_init/: migration.sql
backend/src/cli/: cli.ts  db.ts  server.ts
backend/src/types/exchange/: base.ts  (+10 more)
backend/strategies/: encore.service.ts  strategies.ts  types.ts
backend/tee/: tee.ts
contracts/: Anchor.toml  README.md  package.json
contracts/programs/fund_manager/: Cargo.toml
contracts/programs/fund_manager/src/: lib.rs
contracts/programs/instance_registry/: Cargo.toml
contracts/tests/: test.ts
interface/: package.json  svelte.config.js  vite.config.ts
interface/src/: app.css
interface/src/lib/: i18n.ts
interface/src/routes/: +layout.svelte  +page.svelte
leaderboard/: package.json  svelte.config.js
leaderboard/src/: app.html
leaderboard/src/routes/: +page.svelte
mrm-v3-docs/: README.md  mrm-v3-2025-03-24-0851.excalidraw  mrm-v3-design.md  mrm-v3-engine.md  mrm-v3-prd.md  mrm-v3-roadmap.md  mrm-v3-spirit.md  spirit.md
mrm-v3-docs/components/: frontend-components-list.md  instance-messaging-protocol.md  tee-implementation.md
(+85 files in other folders)
